src/test/ui/type-alias-impl-trait/bounds-are-checked-2.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bounds-are-checked-2.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0277]: the trait bound `T: Clone` is not satisfied
  --> $DIR/bounds-are-checked-2.rs:9:13
   |
LL | type X<T> = impl Clone;
   |             ^^^^^^^^^^ the trait `Clone` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | type X<T: std::clone::Clone> = impl Clone;
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
